test/fails/bad_tags/add1.lgl
tag a is vec2;

a x = [1., 2.];
a bad = x + [5., 5.]; // Addition goes to the most general type